--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="service">
                 <div class="icon">👩‍🏫</div>
                     <h1>Hani hamidah</h1>
-                    <p>Sebagai Seroang wali kelas murid</p>
+                    <p>Sebagai Seorang wali kelas murid</p>
                 </div>
                     <div class="service">
                     <div class="icon">👨‍🎓</div>
